Fixed color inverting on svg, adding some color contrast, and changed the canto svg to althea logo on staking page

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -47,7 +47,7 @@ a {
 .light {
   --card-background-color: #f0f0f0;
   --graph-fill: #868686;
-  --text-blue-color: #0038d2;
+  --text-blue-color: #0077ff;
   --graph-filled: #141414;
   --anim-bg-color: #dddddd;
   --canto-color: var(--extra-success-color, #06fc99);
@@ -82,7 +82,7 @@ a {
   --button-highlight: #6fb2ff;
   --border-radius: 0px;
   --text-dark-color: #111111;
-  --card-sub-surface-color: white;
+  --card-sub-surface-color: #e7efff;
   --card-surface-color: #0077ff;
   --althea-blue: #0077ff;
   --dark-mode: 0;
@@ -110,7 +110,7 @@ a {
 .dark {
   --card-background-color: #111111;
   --card-primary-color-opp: #111111;
-  --text-blue-color: #0038d2;
+  --text-blue-color: #0077ff;
   --althea-blue: #0077ff;
   --graph-fill: #969696;
   //   --graph-filled: #dcdcdc;
@@ -147,7 +147,7 @@ a {
   --border-stroke-color: white;
   --border-radius: 5;
   --text-dark-color: #ececec;
-  --card-sub-surface-color: black;
+  --card-sub-surface-color: #061c36;
   --card-surface-color: #0077ff;
   --dark-mode: 1;
   --light-mode: 0;
